# stm32-usbd-examples

./: .gitignore  .gitmodules  Cargo.toml  README.md
cdc_acm/: Cargo.toml
cdc_acm/src/: lib.rs
ci/: install.sh  script.sh
example-stm32f042k6/: Cargo.toml  memory.x
example-stm32f042k6/src/: main.rs
example-stm32f072rb/: Cargo.toml  memory.x  openocd.cfg
example-stm32f072rb/.cargo/: config
example-stm32f072rb/src/: main.rs
example-stm32f103c8/: Cargo.toml  build.rs  memory.x  openocd.cfg  openocd.gdb
example-stm32f103c8/.cargo/: config
example-stm32f103c8/assets/: blinky.html
example-stm32f103c8/examples/: serial_interrupt.rs  serial_rtfm.rs  usb_mouse_rtfm.rs  webusb_blinky.rs
example-stm32f103c8/src/: main.rs
example-stm32f303vc/: Cargo.toml
example-stm32f303vc/src/: main.rs
example-stm32l432kc/: Cargo.toml  memory.x  openocd.cfg
example-stm32l432kc/src/: main.rs
