[package]
name = "example-stm32f042k6"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
cortex-m-rt = "0.6"
stm32f0xx-hal = { version = "0.14", features = ["rt", "stm32f042"] }
panic-semihosting = "0.5"
usb-device = "0.2"
cdc_acm = "0.1"
stm32-usbd = { version = "0.1", features = ["stm32f042xx"] }
