[package]
name = "example-stm32f042k6"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
stm32f0xx-hal = { version = "0.17", features = ["stm32f042", "stm32-usbd"] }
panic-semihosting = "0.5"
usb-device = "0.2.1"
usbd-serial = "0.1"
stm32-usbd = { version = "0.5", features = ["ram_access_2x16"] }
