[package]
name = "example-stm32f072rb"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
stm32f0xx-hal = { version = "0.14.1", features = ["rt", "stm32f072"] }
panic-semihosting = "0.5"
usb-device = "0.2.1"
cdc_acm = "0.1"
stm32-usbd = { version = "0.2", features = ["stm32f072xx"] }

[patch.crates-io]
cdc_acm = { path = "../cdc_acm" }
