[package]
name = "example-stm32f072rb"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
stm32f0xx-hal = { version = "0.18", features = ["rt", "stm32f072", "stm32-usbd"] }
panic-semihosting = "0.5"
usb-device = "0.2.9"
usbd-serial = "0.1"
stm32-usbd = { version = "0.6.0" }
