[package]
name = "example-stm32f103c8"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
cortex-m-rt = "0.6"
stm32f1xx-hal = { version = "0.3", features = ["rt"] }
panic-semihosting = "0.5"
usb-device = "0.2.1"
cdc_acm = "0.1"
stm32-usbd = { version = "0.1", features = ["stm32f103xx"] }

[patch.crates-io]
cdc_acm = { path = "../cdc_acm" }
