[package]
name = "example-stm32f103c8"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>", "Matti Virkkunen <mvirkkunen@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
stm32f1xx-hal = { version = "0.5", features = ["stm32f103", "stm32-usbd", "rt"] }
panic-semihosting = "0.5"
usb-device = "0.2.4"
usbd-serial = "0.1"
usbd-webusb = "1.0.0"
embedded-hal = "0.2.3"

[dev-dependencies]
cortex-m-rtfm = "0.5"
