[package]
name = "example-stm32l432kc"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
cortex-m-rt = "0.6"
stm32l4xx-hal = { version = "0.4", features = ["rt", "stm32l4x2"] }
panic-semihosting = "0.5"
usb-device = "0.2"
cdc_acm = "0.1"
stm32-usbd = { version = "0.1", features = ["stm32l4x2xx"] }
